@@ -1,3 +1,7 @@
+2002-02-19  Werner Koch  <wk@gnupg.org>
+
+	* cert-basic.c (list_extensions): Print certificatePolicies.
+
 2002-02-07  Werner Koch  <wk@gnupg.org>
 
 	* crl_testpki_testpca.der: New.
